objects/ARCancelMapReasonCode__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>AR Cancellation Reason Code Maps to B* Reason Code</description>
    <fields>
        <fullName>BP_BlueStar_Code__c</fullName>
        <label>BP_BlueStar_Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BlueStar_Cancel_Code__c</fullName>
        <description>SFDC vs BlueStar Cancel Code Map</description>
        <inlineHelpText>BlueStar Cancel Code IS required to Request for AR Account Cancelllation</inlineHelpText>
        <label>BlueStar Cancel Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cat_BlueStar_Code__c</fullName>
        <description>Category BlueStar Cancel Codes</description>
        <label>Cat_BlueStar_Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grp_Section_Bluestar_Code__c</fullName>
        <label>Grp_Section_Bluestar_Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>AR Cancel Map Reason Code</label>
    <listViews>
        <fullName>Reason_Codes</fullName>
        <columns>NAME</columns>
        <columns>BlueStar_Cancel_Code__c</columns>
        <columns>BP_BlueStar_Code__c</columns>
        <columns>Cat_BlueStar_Code__c</columns>
        <columns>Grp_Section_Bluestar_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>Reason Codes</label>
    </listViews>
</CustomObject>